--- a/visavia/index.html
+++ b/visavia/index.html
@@ -465,13 +465,13 @@
 				</div>
 			</section>
 			<section class="visa-type">
-				<div class="container-fluid">
+				<div class="container-fluid tab-content" id="tabreveal">
 					<div class="title visa-type__title">
 						<h2>Оформляем 5 видов виз от 1 до 3 дней с гарантией выдачи</h2>
 					</div>
 					<ul class="nav nav-tabs visa-type__control">
 						<li class="nav-tabs__item">
-							<a href="#vt1" class="active show" data-toggle="tab">Туристическая</a>
+							<a href="#vt1" name="vt1" data-toggle="tab" class="active show">Туристическая</a>
 						</li>
 						<li class="nav-tabs__item">
 							<a href="#vt2" class="" data-toggle="tab">Гостевая виза</a>
@@ -648,7 +648,7 @@
 			</section>
 			<section class="anim-section calc">
 				<div class="container-fluid">
-					<div class="calc__wrap skewed">
+					<div class="calc__wrap skewed skewed_calc">
 						<div class="skewed__top"></div>
 						<div class="skewed__holder">
 							<div class="skewed__content">
@@ -1031,8 +1031,8 @@
 														</div>
 													</a>
 													<div class="custom-control custom-checkbox">
-														<input type="checkbox" class="custom-control-input" id="customCheck2">
-														<label class="custom-control-label" for="customCheck2">Я даю свое согласие на обработку персональных данных и соглашаюсь <a href="#">с&nbsp;политикой конфиденциальности</a> </label>
+														<input type="checkbox" class="custom-control-input" id="customCheck3">
+														<label class="custom-control-label" for="customCheck3">Я даю свое согласие на обработку персональных данных и соглашаюсь <a href="#">с&nbsp;политикой конфиденциальности</a> </label>
 													</div>
 												</form>
 											</div>
@@ -1076,8 +1076,8 @@
 										</div>
 									</a>
 									<div class="custom-control custom-checkbox">
-										<input type="checkbox" class="custom-control-input" id="customCheck2">
-										<label class="custom-control-label" for="customCheck2">Я даю свое согласие на обработку персональных данных и соглашаюсь <a href="#">с&nbsp;политикой конфиденциальности</a> </label>
+										<input type="checkbox" class="custom-control-input" id="customCheck4">
+										<label class="custom-control-label" for="customCheck4">Я даю свое согласие на обработку персональных данных и соглашаюсь <a href="#">с&nbsp;политикой конфиденциальности</a> </label>
 									</div>
 								</form>
 							</div>
