--- a/visavia/index.html
+++ b/visavia/index.html
@@ -193,7 +193,9 @@
 							<div class="row">
 								<div class="col-sm-6 col-ml-4 which__item">
 									<div class="visa-direction visa-direction_schengen">
-										<div class="visa-direction__illustr"></div>
+										<div class="visa-direction__illustr">
+											<img src="img/visa-direction/1_1.png" alt="">
+										</div>
 										<div class="visa-direction__img" style="background-image: url(img/visa-direction/1.jpg)"></div>
 										<div class="visa-direction__holder">
 											<div class="visa-direction__content">
@@ -232,7 +234,10 @@
 								</div>
 								<div class="col-sm-6 col-ml-4 which__item">
 									<div class="visa-direction visa-direction_europe">
-										<div class="visa-direction__illustr"></div>
+										<div class="visa-direction__illustr">
+											<img src="img/visa-direction/3_1.png" alt="">
+											<img src="img/visa-direction/3_2.png" alt="">
+										</div>
 										<div class="visa-direction__img" style="background-image: url(img/visa-direction/3.jpg)"></div>
 										<div class="visa-direction__holder">
 											<div class="visa-direction__content">
@@ -250,7 +255,10 @@
 								</div>
 								<div class="col-sm-6 col-ml-4 which__item">
 									<div class="visa-direction visa-direction_america">
-										<div class="visa-direction__illustr"></div>
+										<div class="visa-direction__illustr">
+											<img src="img/visa-direction/4_1.png" alt="">
+											<img src="img/visa-direction/4_2.png" alt="">
+										</div>
 										<div class="visa-direction__img" style="background-image: url(img/visa-direction/4.jpg)"></div>
 										<div class="visa-direction__holder">
 											<div class="visa-direction__content">
@@ -268,7 +276,10 @@
 								</div>
 								<div class="col-sm-6 col-ml-4 which__item">
 									<div class="visa-direction visa-direction_oceania">
-										<div class="visa-direction__illustr"></div>
+										<div class="visa-direction__illustr">
+											<img src="img/visa-direction/5_1.png" alt="">
+											<img src="img/visa-direction/5_2.png" alt="">
+										</div>
 										<div class="visa-direction__img" style="background-image: url(img/visa-direction/5.jpg)"></div>
 										<div class="visa-direction__holder">
 											<div class="visa-direction__content">
@@ -326,23 +337,20 @@
 								<ul class="difficulties__list">
 									<li>
 										<div class="difficulties__ico">
-											<svg class="icon-dif-1 ">
-												<use xlink:href="img/svg/symbol/sprite.svg#dif-1"></use>
-											</svg></div>
+											<img src="img/difficulties/ico/1.png" alt="">
+										</div>
 										<b>Можете не получить визу вовсе</b>из-за неверно оформленных документов
 									</li>
 									<li>
 										<div class="difficulties__ico">
-											<svg class="icon-dif-2 ">
-												<use xlink:href="img/svg/symbol/sprite.svg#dif-2"></use>
-											</svg></div>
+											<img src="img/difficulties/ico/2.png" alt="">
+										</div>
 										<b>Собираете пакет документов</b>Теряете неоплаченный рабочий день
 									</li>
 									<li>
 										<div class="difficulties__ico">
-											<svg class="icon-dif-3 ">
-												<use xlink:href="img/svg/symbol/sprite.svg#dif-3"></use>
-											</svg></div>
+											<img src="img/difficulties/ico/3.png" alt="">
+										</div>
 										<b>Оплачиваете консульский</b>Оплачиваете консульский сбор, сервисно-визовый сбор
 									</li>
 								</ul>
@@ -366,26 +374,23 @@
 								<ul class="difficulties__list">
 									<li>
 										<div class="difficulties__ico">
-											<svg class="icon-dif-4 ">
-												<use xlink:href="img/svg/symbol/sprite.svg#dif-4"></use>
-											</svg></div>
+											<img src="img/difficulties/ico/4.png" alt="">
+										</div>
 										<b>Перевода на английский язык</b>Часто для перевода на английский язык нужен сертифицированный переводчик
 									</li>
 									<li>
 										<div class="difficulties__ico">
-											<svg class="icon-dif-5 ">
-												<use xlink:href="img/svg/symbol/sprite.svg#dif-5"></use>
-											</svg></div>
+											<img src="img/difficulties/ico/5.png" alt="">
+										</div>
 										<b>Оплачиваете доставку</b>или повторную поездку в консульство
 									</li>
 									<li>
 										<div class="difficulties__ico">
-											<svg class="icon-dif-6 ">
-												<use xlink:href="img/svg/symbol/sprite.svg#dif-6"></use>
-											</svg></div>
+											<img src="img/difficulties/ico/6.png" alt="">
+										</div>
 										<b>Приходите в консульство</b>в Москве (траты на поездку и транспорт)
 									</li>
-								</ul>
+								</ul>невесты / жениха
 							</div>
 						</div>
 					</div>
